--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "vercel-build": "node scripts/vercel-build.js",
     "dev": "nodemon api/server.js"
   },
+
+  "scripts": {
+    "build": "mkdir -p public && echo 'Build completed' && cp -r src/* public/"
+  },
   "dependencies": {
     "accepts": "^1.3.8",
     "anymatch": "^3.1.3",
